Fixed the visibility of buttons on hover

--- a/website3.0/stylesheets/header.css
+++ b/website3.0/stylesheets/header.css
@@ -49,7 +49,6 @@
 
 .auth-btn:hover {
   transform: translateX(10px);
-  background: none;
   border: 1px solid rgb(245, 245, 245);
 }
 .auth-btn {
